--- a/K8S/manifest.yml
+++ b/K8S/manifest.yml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,19 +15,19 @@ spec:
         app: hotstar
     spec:
       containers:
-      - name: hotstar-container
-        image: aseemakram19/hotstar
-        ports:
-        - containerPort: 3000
+        - name: hotstar-container
+          image: abhijithdockerhub/hotstar:v1
+          ports:
+            - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: hotstar-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: hotstar
   ports:
-  - port: 80
-    targetPort: 3000
+    - port: 80
+      targetPort: 3000
